tenzir/functional-test/data/reference/pipelines_local/test_chart_attributes/step_04.ref
error: could not parse `chart` operator
 --> <input>:1:24
  |
1 | from stdin read json | chart donut value=b x=e
  |                        ^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: !! syntax_error: chart type `donut` disallows field `x`